--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -13,11 +13,17 @@ bind C-Space send-prefix
 bind - split-window -v -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
 
+# Move to the next pane with hjkl keys, holding Ctrl
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
 # Pane resizing
-bind -n S-Left resize-pane -L 2
-bind -n S-Right resize-pane -R 2
-bind -n S-Down resize-pane -D 1
-bind -n S-Up resize-pane -U 1
+bind -n M-Left resize-pane -L 2
+bind -n M-Right resize-pane -R 2
+bind -n M-Down resize-pane -D 2
+bind -n M-Up resize-pane -U 2
 
 # Status bar
 set -g status-right ""
@@ -25,7 +31,6 @@ set -g status-right ""
 # Plugins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
-set -g @plugin "christoomey/vim-tmux-navigator"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "~/.tmux/plugins/tpm/tpm"
