--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -20,10 +20,10 @@ bind -n C-k select-pane -U
 bind -n C-l select-pane -R
 
 # Pane resizing
-bind -n M-Left resize-pane -L 2
-bind -n M-Right resize-pane -R 2
-bind -n M-Down resize-pane -D 2
-bind -n M-Up resize-pane -U 2
+bind -n S-Left resize-pane -L 2
+bind -n S-Right resize-pane -R 2
+bind -n S-Down resize-pane -D 2
+bind -n S-Up resize-pane -U 2
 
 # Status bar
 set -g status-right ""
