--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,7 +4,6 @@ include current-theme.conf
 font_size 16.0
 line_height 1
 cursor_shape block
-editor nvim
 underline_hyperlinks always
 
 # Windows
@@ -14,4 +13,4 @@ initial_window_height 50
 window_margin_width 1
 window_border_width 0.5pt
 enabled_layouts tall:bias=50;full_size=1;mirrored=false, stack
-map kitty_mod+z toggle_layout stack # Zoom in with Ctrl + z
+map kitty_mod+z toggle_layout stack
