--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,5 @@
 # Set true color
+set -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 
@@ -10,6 +11,11 @@ set -g mouse on
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
+
+
+# Source config changes
+unbind r
+bind r source-file ~/.tmux.conf
 
 
 # Open panes in current directory
