Update tmux status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,13 +54,14 @@ bind -n S-Down resize-pane -D 2
 bind -n S-Up resize-pane -U 2
 
 
-# Status bar
-set -g status-right ""
+# Toggle status bar
+bind-key b set-option status
 
 
 # Plugins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "niksingh710/minimal-tmux-status"
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
