Update Tmux theme config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -67,6 +67,21 @@ set -g @tpm_plugins '
 '
 
 
+# Catpuccin theme config
+set -g @catppuccin_window_right_separator "█"
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_middle_separator " | "
+
+set -g @catppuccin_window_default_fill "none"
+
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#{b:pane_current_path}"
+
+set -g @catppuccin_status_modules_right "application session"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "~/.tmux/plugins/tpm/tpm"
 
