--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -9,20 +9,24 @@ TERM = "xterm-256color"
 size = 16
 
 [font.bold]
-family = "JetBrainsMono Nerd Font"
+family = "MartianMono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "JetBrainsMono Nerd Font"
+family = "MartianMono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "JetBrainsMono Nerd Font"
+family = "MartianMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrainsMono Nerd Font"
+family = "MartianMono Nerd Font"
 style = "Regular"
+
+[font.offset]
+x = 1
+y = 6
 
 [scrolling]
 history = 5000
