--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,7 @@ bind r source-file ~/.tmux.conf
 # Open panes in current directory
 bind - split-window -v -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 
 # Move to the next pane with hjkl keys, holding Ctrl
