--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -9,19 +9,19 @@ TERM = "xterm-256color"
 size = 16
 
 [font.bold]
-family = "MartianMono Nerd Font"
+family = "DejaVuSansM Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "MartianMono Nerd Font"
+family = "DejaVuSansM Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "MartianMono Nerd Font"
+family = "DejaVuSansM Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "MartianMono Nerd Font"
+family = "DejaVuSansM Nerd Font"
 style = "Regular"
 
 [font.offset]
