--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -60,27 +60,23 @@ bind-key b set-option status
 set -g status-position top
 
 
+# Source config
+bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
+
+# Status bar style
+set -g status-style bg="#89b4fa",fg="#1e1e2e"
+set -g status-right ""
+set -g window-status-current-style bg="#1e1e2e",fg="#89b4fa",bold
+set -g window-status-format " #I:#W "
+set -g window-status-current-format " #I:#W "
+
+
 # Plugins
 set -g @tpm_plugins '
     tmux-plugins/tpm \
     tmux-plugins/tmux-sensible \
-    catppuccin/tmux \
 '
-
-
-# Catpuccin theme config
-set -g @catppuccin_window_right_separator "█"
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_middle_separator " | "
-
-set -g @catppuccin_window_default_fill "none"
-
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#{b:pane_current_path}"
-
-set -g @catppuccin_status_modules_right "application session"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
