--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -65,9 +65,9 @@ bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 
 # Status bar style
-set -g status-style bg="#89b4fa",fg="#1e1e2e"
+set -g status-style bg="#ffd866",fg="#222222"
 set -g status-right ""
-set -g window-status-current-style bg="#1e1e2e",fg="#89b4fa",bold
+set -g window-status-current-style bg="#222222",fg="#ffd866",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 
