starship - Update config

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,49 +1,37 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
-format = """
-$username\
-$hostname\
-$directory\
-$git_branch\
-$git_state\
-$git_status\
-$cmd_duration\
-$line_break\
-$python\
-$character"""
-
-[directory]
-style = "blue"
-
-[character]
-success_symbol = "[❯](purple)"
-error_symbol = "[❯](red)"
-vimcmd_symbol = "[❮](green)"
-
-[git_branch]
-format = "[$branch]($style)"
-style = "bright-black"
+# Inserts a blank line between shell prompts
+add_newline = true
+command_timeout = 750
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
-style = "cyan"
-conflicted = "​"
-untracked = "​"
-modified = "​"
-staged = "​"
-renamed = "​"
-deleted = "​"
-stashed = "≡"
+stashed = ""
 
-[git_state]
-format = '\([$state( $progress_current/$progress_total)]($style)\) '
-style = "bright-black"
+# Disable certain features
+[username]
+disabled = true
 
-[cmd_duration]
-format = "[$duration]($style) "
-style = "yellow"
+[hostname]
+disabled = true
 
-[python]
-format = "[$virtualenv]($style) "
-style = "bright-black"
+[package]
+disabled = true
+
+[docker_context]
+disabled = true
+
+[nodejs]
+disabled = true
+
+[ruby]
+disabled = true
+
+[rust]
+disabled = true
+
+[lua]
+disabled = true
+
+[golang]
+disabled = true
