--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -65,9 +65,9 @@ bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 
 # Status bar style
-set -g status-style bg="#78dce8",fg="#222222"
+set -g status-style bg="#78dce8",fg="#2d2a2e"
 set -g status-right ""
-set -g window-status-current-style bg="#222222",fg="#78dce8",bold
+set -g window-status-current-style bg="#2d2a2e",fg="#78dce8",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 
