--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -6,7 +6,7 @@ live_config_reload = true
 TERM = "xterm-256color"
 
 [font]
-size = 16
+size = 18
 
 [font.bold]
 family = "DejaVuSansM Nerd Font"
@@ -32,7 +32,10 @@ y = 6
 history = 5000
 
 [window]
-dynamic_padding = false
+dynamic_padding = true
+
+[window.padding]
+x = 10
 
 [window.dimensions]
 columns = 120
