tmux - Ensure session name is always on the left

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,6 +70,7 @@ set -g status-right ""
 set -g window-status-current-style bg="#2d2a2e",fg="#78dce8",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
+set-window-option -g status-left "  #S  "
 
 
 # Plugins
