tmux - Update status bar session name location

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,11 +66,11 @@ bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Status bar style
 set -g status-style bg="#78dce8",fg="#2d2a2e"
-set -g status-right ""
 set -g window-status-current-style bg="#2d2a2e",fg="#78dce8",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
-set-window-option -g status-left "  #S  "
+set-window-option -g status-left "  "
+set-window-option -g status-right "#S  "
 
 
 # Plugins
