Switch to Tokyo Night theme
Also:
- Remove duplicate alias in tmux config
- Remove X axis padding in alacritty config
- Update nvim plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,11 +13,6 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 
-# Source config changes
-unbind r
-bind r source-file ~/.tmux.conf
-
-
 # Open panes in current directory
 bind - split-window -v -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
@@ -65,11 +60,11 @@ bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 
 # Status bar style
-set -g status-style bg="#78dce8",fg="#2d2a2e"
-set -g window-status-current-style bg="#2d2a2e",fg="#78dce8",bold
+set -g status-style bg="#4fd6be",fg="#1f2335"
+set -g window-status-current-style bg="#25283b",fg="#4fd6be",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
-set-window-option -g status-left "  "
+set-window-option -g status-left ""
 set-window-option -g status-right "#S  "
 
 
