tmux - Make session name bold

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -65,7 +65,7 @@ set -g window-status-current-style bg="#25283b",fg="#4fd6be",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 set-window-option -g status-left ""
-set-window-option -g status-right "#S  "
+set-window-option -g status-right "#[bold]#S  "
 
 
 # Plugins
