nvim/tmux - Catppuccin theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -60,8 +60,8 @@ bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 
 # Status bar style
-set -g status-style bg="#4fd6be",fg="#1f2335"
-set -g window-status-current-style bg="#25283b",fg="#4fd6be",bold
+set -g status-style bg="#89b4fa",fg="#1e1e2e"
+set -g window-status-current-style bg="#1e1e2e",fg="#89b4fa",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 set-window-option -g status-left ""
