--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -60,8 +60,8 @@ bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 
 # Status bar style
-set -g status-style bg="#89b4fa",fg="#1e1e2e"
-set -g window-status-current-style bg="#1e1e2e",fg="#89b4fa",bold
+set -g status-style bg="#529BF5",fg="#131519"
+set -g window-status-current-style bg="#131519",fg="#529BF5",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 set-window-option -g status-left ""
@@ -72,6 +72,7 @@ set-window-option -g status-right "#[bold]#S  "
 set -g @tpm_plugins '
     tmux-plugins/tpm \
     tmux-plugins/tmux-sensible \
+    tmux-plugins/tmux-resurrect \
 '
 
 
