Tokyo Night Moon

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -60,8 +60,8 @@ bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 
 # Status bar style
-set -g status-style bg="#89B4FA",fg="#1E1E2E"
-set -g window-status-current-style bg="#1E1E2E",fg="#89B4FA",bold
+set -g status-style bg="#82AAFF",fg="#222436"
+set -g window-status-current-style bg="#222436",fg="#82AAFF",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 set-window-option -g status-left ""
