--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,10 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 
+# Vim keybindings
+set-window-option -g mode-keys vi
+
+
 # Open panes in current directory
 bind - split-window -v -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
