--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -2,7 +2,7 @@ auto-update = check
 adjust-cell-height = 8
 font-family = MartianMono Nerd Font
 font-size = 18
-theme = catppuccin-mocha
+theme = Kanagawa Wave
 clipboard-read = allow
 clipboard-write = allow
 cursor-style = block
