--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,7 +1,7 @@
 auto-update = check
-adjust-cell-height = 8
-font-family = MartianMono Nerd Font
-font-size = 18
+adjust-cell-height = 12
+font-family = CaskaydiaCove Nerd Font
+font-size = 24
 theme = Kanagawa Wave
 clipboard-read = allow
 clipboard-write = allow
