--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,8 +64,8 @@ bind s source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 
 # Status bar style
-set -g status-style bg="#849BD3",fg="#1F1F27"
-set -g window-status-current-style bg="#1F1F27",fg="#849BD3",bold
+set -g status-style bg="#6A8AB2",fg="#E1E1DE"
+set -g window-status-current-style bg="#E1E1DE",fg="#6A8AB2",bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 set-window-option -g status-left ""
