tmux - Change split keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,8 +18,8 @@ set-window-option -g mode-keys vi
 
 
 # Open panes in current directory
-bind - split-window -v -c "#{pane_current_path}"
-bind \\ split-window -h -c "#{pane_current_path}"
+bind h split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 
