--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -2,7 +2,7 @@ auto-update = check
 adjust-cell-height = 12
 font-family = JetbrainsMono Nerd Font
 font-size = 16
-theme = Kanagawa Wave
+theme = Seoulbones Light
 clipboard-read = allow
 clipboard-write = allow
 cursor-style = block
